Added file upload/download

--- a/src/app/_directives/home/home.component.html
+++ b/src/app/_directives/home/home.component.html
@@ -1,5 +1,8 @@
-<div class="home-box">
+<div class="main-box">
   <h1>
     Welcome Home!
   </h1>
+  <div class="container">
+    <a routerLink="/files">File Browser</a>
+  </div>
 </div>
