Improved upload with progress bar. Delete functionality.

--- a/src/app/_directives/file-browser/file-browser.component.html
+++ b/src/app/_directives/file-browser/file-browser.component.html
@@ -8,9 +8,17 @@
       <span [textContent]="file.filename" class="title"></span>
       <span [textContent]="file.description" class="description"></span>
       <span>
-        <a title="download" target="_self" href="/api/download/{{file._id}}?token={{authService.getToken()}}" download="{{file.filename}}"><i class="fa fa-download" aria-hidden="true"></i></a>
+        <a title="download" target="_self" href="/api/file/{{file._id}}?token={{authService.getToken()}}" download><i class="fa fa-download" aria-hidden="true"></i></a>
         <button title="edit"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></button>
-        <button title="delete"><i class="fa fa-trash-o" aria-hidden="true"></i></button>
+        <button title="delete" (click)="deleteFile(file._id)"><i class="fa fa-trash-o" aria-hidden="true"></i></button>
       </span>
     </div>
 </div>
+<app-modal #modal>
+  <div class="app-modal-header">
+    <h1>Uploading...</h1>
+  </div>
+  <div class="app-modal-body">
+    <app-progress-bar></app-progress-bar>
+  </div>
+</app-modal>
