--- a/src/app/_directives/file-browser/file-browser.component.html
+++ b/src/app/_directives/file-browser/file-browser.component.html
@@ -4,7 +4,7 @@
   </h1>
   <span><button title="upload"><i class="fa fa-upload" aria-hidden="true" (click)="fileChangeSelect($event)"></i></button></span>
   <input #fileInput type="file" (change)="fileChange($event)" placeholder="upload" style="display:none"/>
-    <div *ngFor="let file of files" class="file-item">
+    <div *ngFor="let file of pager.data" class="file-item">
       <span [textContent]="file.filename" class="title"></span>
       <span [textContent]="file.description" class="description"></span>
       <span>
@@ -13,6 +13,7 @@
         <button title="delete" (click)="deleteFile(file._id)"><i class="fa fa-trash-o" aria-hidden="true"></i></button>
       </span>
     </div>
+    <app-pager [pager]="pager"></app-pager>
 </div>
 <app-modal #modal>
   <div class="app-modal-header">
